[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/interactive/interactive/tablet.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/tabletWithWiresCut.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/Tablet.gd" type="Script" id=3]
[ext_resource path="res://scenes/interact/FSTablet.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.5, 57.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 35 )

[node name="Tablet" type="Node2D"]
position = Vector2( -210, -305 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FSTablet" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = -1007.0
margin_top = -826.0
margin_right = -1007.0
margin_bottom = -826.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 207.5, 312.5 )
shape = SubResource( 2 )

[node name="TabletOff" type="Sprite" parent="Area2D"]
position = Vector2( 210, 310 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Area2D/TabletOff"]
margin_left = -19.0
margin_top = -31.0
margin_right = 18.0
margin_bottom = 29.0
color = Color( 0, 0, 0, 1 )

[node name="Tablet" type="Sprite" parent="Area2D"]
position = Vector2( 210, 310 )
texture = ExtResource( 1 )

[node name="TabletWithWiresCut" type="Sprite" parent="Area2D"]
position = Vector2( 210, 310 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 207.5, 310 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
